<resources>
    <string name="app_name">Agenda</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_contacts">Contacts</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_events">Events</string>
    <string name="popup_create_event_window_title">Create event</string>
    <string name="popup_create_event_event_title">Title</string>
    <string name="popup_create_event_event_beginning_date">Beginning date</string>
    <string name="popup_create_event_event_ending_date">Ending date</string>
    <string name="popup_create_event_event_beginning_time">Beginning time</string>
    <string name="popup_create_event_event_ending_tile">Ending time</string>
    <string name="popup_create_event_button_create">Create</string>
    <string name="popup_create_event_event_description">Description</string>
    <string name="popup_update_event_window_title">Update event</string>
    <string name="popup_update_event_event_title">Title</string>
    <string name="popup_update_event_event_description">Description</string>
    <string name="popup_update_event_event_beginning_date">Beginning date</string>
    <string name="popup_update_event_event_ending_date">Ending date</string>
    <string name="popup_update_event_event_beginning_time">Beginning time</string>
    <string name="popup_update_event_event_ending_time">Ending time</string>
    <string name="popup_update_event_button_update">Update</string>
    <string name="popup_update_event_button_delete">Delete</string>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_logout">logout</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_events">Events</string>
    <string name="navigation_contacts">Contacts</string>
    <string name="activity_login_window_title">Sign in</string>
    <string name="activity_login_button_login">Login</string>
    <string name="activity_login_button_create_account">Don\'t have an account yet? Create one</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_signup_name">Name</string>
    <string name="activity_signup_email">Email</string>
    <string name="activity_signup_password">Password</string>
    <string name="activity_signup_button_create_account">Create Account</string>
    <string name="activity_signup_button_login">Member already? Login</string>
    <string name="activity_signup_window_title">Sign up</string>
    <string name="LoginActivity_connecting">Connecting...</string>
    <string name="LoginActivity_login_failed">Login failed</string>
    <string name="LoginActivity_invalid_password_message">Password must be between 5 and 10 alphanumeric characters</string>
    <string name="LoginActivity_invalid_email_message">Enter a valid email</string>
    <string name="SignupActivity_login_failed">Login failed</string>
    <string name="SignupActivity_invalid_email_message">Enter a valid email</string>
    <string name="SignupActivity_invalid_password_message">Password must be between 5 and 10 alphanumeric characters</string>
    <string name="SignupActivity_invalid_name_message">Name must be at least 3 characters</string>
    <string name="MainActivity_share_title">Share</string>
    <string name="MainActivity_share_text">Join the Homy community by clicking on the following link</string>
    <string name="EventFragment_today_title">Today</string>
    <string name="ContactFragment_contact_tilte">List of contacts</string>
    <string name="actionbar_rate">Rate</string>
    <string name="custom_calendar_adapter_today_text">Today</string>
    <string name="MainActivity_my_agenda_text">My calendar</string>
</resources>
