<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rate"
        android:checked="false"
        android:icon="@android:drawable/btn_star"
        android:title="@string/actionbar_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:checked="false"
        android:icon="@drawable/ic_share"
        android:title="@string/actionbar_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:checked="false"
        android:icon="@drawable/ic_person"
        android:title="@string/actionbar_logout"
        app:showAsAction="never" />


</menu>