<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.alternance.etna.agenda.Popup.UpdateEventActivity">

<TextView
    android:id="@+id/updateEventId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="id"
    android:textAlignment="center"
    android:visibility="invisible"/>
<LinearLayout
    android:layout_width="372dp"
    android:layout_height="500dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popupUpdateTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_update_event_window_title"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/updateEventLabelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_update_event_event_title"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/updateEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/updateEventLabelDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_update_event_event_description"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/updateEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/updateEventLabelDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_update_event_event_beginning_date"
        android:textAlignment="textStart" />

    <DatePicker
        android:id="@+id/updateEventDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:calendarViewShown="?android:attr/windowOverscan"
        android:datePickerMode="spinner"
        android:minDate="01/01/2018"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/updateEventLabelTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_update_event_event_beginning_time"
        android:textAlignment="textStart" />

    <TimePicker
        android:id="@+id/updateEventTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateEventUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popup_update_event_button_update"
            android:textAlignment="center" />

        <Button
            android:id="@+id/updateEventDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popup_update_event_button_delete"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>

</android.support.constraint.ConstraintLayout>
